# bootyloaders

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.old
components/button/: button.c  button.h
components/button/platform/inc/: button_gpio.h
components/button/platform/src/: button_gpio.c
components/game/: CMakeLists.txt
components/game/inc/: board.h  game.h  game_engine.h  game_object.h  kraken.h  map.h  player.h
components/game/src/: board.c  game.c  game_engine.c  game_object.c  kraken.c  map.c  player.c
components/joystick/: CMakeLists.txt  joystick.c  joystick.h
components/joystick/platform/inc/: potentiometer.h
components/joystick/platform/src/: potentiometer.c
components/led/: CMakeLists.txt  led.c  led.h
components/led/platform/inc/: led_gpio.h
components/led/platform/src/: led_gpio.c
components/sensor/: CMakeLists.txt  sensor.h
components/sensor/platform/inc/: sht3x.h
components/sensor/platform/src/: sht3x.c
components/telemetry/: CMakeLists.txt  telemetry.c  telemetry.h
components/telemetry/platform/inc/: telemetry_driver.h
components/telemetry/platform/src/: telemetry_driver.c
components/ui_app/: CMakeLists.txt  ui_app.c
components/ui_app/squareline/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
components/ui_app/squareline/components/: ui_comp.c  ui_comp.h  ui_comp_button1.c  ui_comp_button1.h  ui_comp_hook.c  ui_comp_hook.h
components/ui_app/squareline/images/: ui_img_1049535237.c  ui_img_1159460666.c  ui_img_neptune_png.c
components/ui_app/squareline/screens/: ui_AlienTicTacToe.c  ui_IntroScreen.c  ui_MainScreen.c  ui_MeasurementsScreen.c  ui_ProvisionScreen.c  ui_WifiScreen.c  ui_endGameScreen.c  ui_mapScreen.c
components/user_interface/: CMakeLists.txt  user_interface.c
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
components/wifi/platform/inc/: wifi_driver.h
components/wifi/platform/src/: wifi_driver.c
main/: CMakeLists.txt  app_main.c  gui.c  gui.h
